--- a/app/view/index.phtml
+++ b/app/view/index.phtml
@@ -1,24 +1,12 @@
 <form method="post" action="<?php echo App::config('url') ?>Index/newPost">
 
     <div class="form-group">
-        <label for="content">What's on your mind?</label>
+        <label for="content">O čemu razmišljate?</label>
         <input id="content" name="content">
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">Kreiraj objavu</button>
 
 </form>
 
 
-<?php foreach ($posts as $post): ?>
-    <p>
-        <a href="<?php echo App::config('url') ?>Index/view/<?= $post->getId() ?> ">
-            <?= htmlspecialchars($post->getContent()) ?>
-        </a>
-       Objavljeno:
-        <?php
-        $date = new DateTime($post->getDate());
-        echo $date->format('d.m.Y. H:i');
-        ?>
-    </p>
-<?php endforeach; ?>
